tests/baselines/reference/excessPropertyErrorForFunctionTypes.errors.txt
excessPropertyErrorForFunctionTypes.ts(4,44): error TS2353: Object literal may only specify known properties, and 'd' does not exist in type 'DoesntWork'.


==== excessPropertyErrorForFunctionTypes.ts (1 errors) ====
    type FunctionType = () => any;
    type DoesntWork = { a: number, c: number } | FunctionType;
    
    let doesntWork: DoesntWork = { a: 1, c: 2, d: 3 }
                                               ~
!!! error TS2353: Object literal may only specify known properties, and 'd' does not exist in type 'DoesntWork'.